@@ -25,6 +25,7 @@ package jdk.jpackage.test;
 
 import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.mapping;
+import static java.util.stream.Collectors.toCollection;
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static java.util.stream.Collectors.toSet;
@@ -32,21 +33,25 @@ import static jdk.jpackage.test.AdditionalLauncher.forEachAdditionalLauncher;
 
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
+import java.nio.file.LinkOption;
 import java.nio.file.Path;
 import java.security.SecureRandom;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.OptionalInt;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
@@ -55,6 +60,7 @@ import java.util.regex.Pattern;
 import java.util.spi.ToolProvider;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 import jdk.jpackage.internal.util.function.ThrowingConsumer;
 import jdk.jpackage.internal.util.function.ThrowingFunction;
 import jdk.jpackage.internal.util.function.ThrowingRunnable;
@@ -67,12 +73,14 @@ import jdk.jpackage.internal.util.function.ThrowingSupplier;
  */
 public class JPackageCommand extends CommandArguments<JPackageCommand> {
 
+    @SuppressWarnings("this-escape")
     public JPackageCommand() {
         prerequisiteActions = new Actions();
         verifyActions = new Actions();
+        excludeStandardAsserts(StandardAssert.MAIN_LAUNCHER_DESCRIPTION);
     }
 
-    public JPackageCommand(JPackageCommand cmd) {
+    private JPackageCommand(JPackageCommand cmd, boolean immutable) {
         args.addAll(cmd.args);
         withToolProvider = cmd.withToolProvider;
         saveConsoleOutput = cmd.saveConsoleOutput;
@@ -81,21 +89,23 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
         suppressOutput = cmd.suppressOutput;
         ignoreDefaultRuntime = cmd.ignoreDefaultRuntime;
         ignoreDefaultVerbose = cmd.ignoreDefaultVerbose;
-        immutable = cmd.immutable;
-        dmgInstallDir = cmd.dmgInstallDir;
+        this.immutable = immutable;
         prerequisiteActions = new Actions(cmd.prerequisiteActions);
         verifyActions = new Actions(cmd.verifyActions);
-        appLayoutAsserts = cmd.appLayoutAsserts;
+        standardAsserts = cmd.standardAsserts;
         readOnlyPathAsserts = cmd.readOnlyPathAsserts;
         outputValidators = cmd.outputValidators;
         executeInDirectory = cmd.executeInDirectory;
         winMsiLogFile = cmd.winMsiLogFile;
+        unpackedPackageDirectory = cmd.unpackedPackageDirectory;
     }
 
     JPackageCommand createImmutableCopy() {
-        JPackageCommand reply = new JPackageCommand(this);
-        reply.immutable = true;
-        return reply;
+        return new JPackageCommand(this, true);
+    }
+
+    JPackageCommand createMutableCopy() {
+        return new JPackageCommand(this, false);
     }
 
     public JPackageCommand setArgumentValue(String argName, String newValue) {
@@ -159,11 +169,6 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
         return null;
     }
 
-    public String getArgumentValue(String argName,
-            Function<JPackageCommand, String> defaultValueSupplier) {
-        return getArgumentValue(argName, defaultValueSupplier, v -> v);
-    }
-
     public <T> T getArgumentValue(String argName,
             Supplier<T> defaultValueSupplier,
             Function<String, T> stringConverter) {
@@ -196,6 +201,17 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
 
     public JPackageCommand addArguments(String name, Path value) {
         return addArguments(name, value.toString());
+    }
+
+    public JPackageCommand mutate(Consumer<JPackageCommand> mutator) {
+        return mutate(List.of(mutator));
+    }
+
+    public JPackageCommand mutate(Iterable<Consumer<JPackageCommand>> mutators) {
+        for (var mutator : mutators) {
+            mutator.accept(this);
+        }
+        return this;
     }
 
     public boolean isImagePackageType() {
@@ -290,41 +306,50 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
             TKit.trace(String.format("Init fake runtime in [%s] directory",
                     fakeRuntimeDir));
 
-            Files.createDirectories(fakeRuntimeDir);
-
-            if (TKit.isLinux()) {
-                // Need to make the code in rpm spec happy as it assumes there is
-                // always something in application image.
-                fakeRuntimeDir.resolve("bin").toFile().mkdir();
-            }
-
             if (TKit.isOSX()) {
                 // Make MacAppImageBuilder happy
                 createBulkFile.accept(fakeRuntimeDir.resolve(Path.of(
                         "lib/jli/libjli.dylib")));
             }
 
-            // Mak sure fake runtime takes some disk space.
+            // Make sure fake runtime takes some disk space.
             // Package bundles with 0KB size are unexpected and considered
             // an error by PackageTest.
-            createBulkFile.accept(fakeRuntimeDir.resolve(Path.of("bin", "bulk")));
+            createBulkFile.accept(fakeRuntimeDir.resolve(Path.of("lib", "bulk")));
 
-            cmd.addArguments("--runtime-image", fakeRuntimeDir);
+            cmd.setArgumentValue("--runtime-image", fakeRuntimeDir);
         });
 
         return this;
     }
 
+    public JPackageCommand usePredefinedAppImage(Path predefinedAppImagePath) {
+        return setArgumentValue("--app-image", Objects.requireNonNull(predefinedAppImagePath))
+                .removeArgumentWithValue("--input");
+    }
+
     JPackageCommand addPrerequisiteAction(ThrowingConsumer<JPackageCommand> action) {
-        verifyMutable();
         prerequisiteActions.add(action);
         return this;
     }
 
     JPackageCommand addVerifyAction(ThrowingConsumer<JPackageCommand> action) {
-        verifyMutable();
-        verifyActions.add(action);
+        return addVerifyAction(action, ActionRole.DEFAULT);
+    }
+
+    enum ActionRole {
+        DEFAULT,
+        LAUNCHER_VERIFIER,
+        ;
+    }
+
+    JPackageCommand addVerifyAction(ThrowingConsumer<JPackageCommand> action, ActionRole actionRole) {
+        verifyActions.add(action, actionRole);
         return this;
+    }
+
+    Stream<ThrowingConsumer<JPackageCommand>> getVerifyActionsWithRole(ActionRole actionRole) {
+        return verifyActions.actionsWithRole(actionRole);
     }
 
     /**
@@ -361,6 +386,29 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
         return cmd;
     }
 
+    public static Path createInputRuntimeImage() {
+
+        final Path runtimeImageDir;
+
+        if (JPackageCommand.DEFAULT_RUNTIME_IMAGE != null) {
+            runtimeImageDir = JPackageCommand.DEFAULT_RUNTIME_IMAGE;
+        } else {
+            runtimeImageDir = TKit.createTempDirectory("runtime-image").resolve("data");
+
+            new Executor().setToolProvider(JavaTool.JLINK)
+                    .dumpOutput()
+                    .addArguments(
+                            "--output", runtimeImageDir.toString(),
+                            "--add-modules", "java.desktop",
+                            "--strip-debug",
+                            "--no-header-files",
+                            "--no-man-pages")
+                    .execute();
+        }
+
+        return runtimeImageDir;
+    }
+
     public JPackageCommand setPackageType(PackageType type) {
         verifyMutable();
         type.applyTo(this);
@@ -368,7 +416,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     public JPackageCommand setDefaultAppName() {
-        return addArguments("--name", TKit.getCurrentDefaultAppName());
+        return setArgumentValue("--name", TKit.getCurrentDefaultAppName());
     }
 
     /**
@@ -435,7 +483,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
 
         if (layout != null) {
         } else if (isRuntime()) {
-            layout = ApplicationLayout.javaRuntime();
+            layout = ApplicationLayout.platformJavaRuntime();
         } else {
             layout = ApplicationLayout.platformAppImage();
         }
@@ -484,7 +532,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
 
     Path unpackedPackageDirectory() {
         verifyIsOfType(PackageType.NATIVE);
-        return getArgumentValue(UNPACKED_PATH_ARGNAME, () -> null, Path::of);
+        return unpackedPackageDirectory;
     }
 
     /**
@@ -512,11 +560,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
         }
 
         if (TKit.isOSX()) {
-            if (packageType() == PackageType.MAC_DMG && dmgInstallDir != null) {
-                return dmgInstallDir;
-            } else {
-                return MacHelper.getInstallationDirectory(this);
-            }
+            return MacHelper.getInstallationDirectory(this);
         }
 
         throw TKit.throwUnknownPlatformError();
@@ -537,6 +581,24 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     /**
+     * Returns the name of the main launcher. It will read the name of the main
+     * launcher from the external app image if such is specified.
+     *
+     * @return the name of the main launcher
+     *
+     * @throws IllegalArgumentException if the command is configured for packaging
+     *                                  Java runtime
+     */
+    public String mainLauncherName() {
+        verifyNotRuntime();
+        return name();
+    }
+
+    boolean isMainLauncher(String launcherName) {
+        return launcherName == null || mainLauncherName().equals(launcherName);
+    }
+
+    /**
      * Returns path for application launcher with the given name.
      *
      * E.g.: [jpackage --name Foo --type rpm] -> `/opt/foo/bin/Foo`
@@ -552,7 +614,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
     public Path appLauncherPath(String launcherName) {
         verifyNotRuntime();
         if (launcherName == null) {
-            launcherName = name();
+            launcherName = mainLauncherName();
         }
 
         if (TKit.isWindows()) {
@@ -570,21 +632,61 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     /**
-     * Returns names of all additional launchers or empty list if none
-     * configured.
+     * Returns names of additional launchers or an empty list if none configured.
+     * <p>
+     * If {@code lookupInPrederfinedAppImage} is {@code true} and the command is
+     * configured with an external app image, it will read names of the additional
+     * launchers from the external app image.
+     *
+     * @param lookupInPrederfinedAppImage if to read names of additional launchers
+     *                                    from an external app image
+     *
+     * @return the names of additional launchers
      */
-    public List<String> addLauncherNames() {
+    public List<String> addLauncherNames(boolean lookupInPrederfinedAppImage) {
+        if (isRuntime()) {
+            return List.of();
+        }
+
         List<String> names = new ArrayList<>();
+        if (lookupInPrederfinedAppImage) {
+            Optional.ofNullable(getArgumentValue("--app-image"))
+                    .map(Path::of)
+                    .map(AppImageFile::load)
+                    .map(AppImageFile::addLaunchers)
+                    .map(Map::keySet)
+                    .ifPresent(names::addAll);
+        }
         forEachAdditionalLauncher(this, (launcherName, propFile) -> {
             names.add(launcherName);
         });
-        return names;
+        return Collections.unmodifiableList(names);
     }
 
-    private void verifyNotRuntime() {
+    /**
+     * Returns names of all launchers.
+     * <p>
+     * If the list is not empty, the first element is {@code null} referencing the
+     * main launcher. In the case of runtime packaging, the list is empty.
+     *
+     * @return the names of all launchers
+     */
+    public List<String> launcherNames(boolean lookupInPrederfinedAppImage) {
         if (isRuntime()) {
-            throw new IllegalArgumentException("Java runtime packaging");
+            return List.of();
         }
+
+        List<String> names = new ArrayList<>();
+        names.add(null);
+        names.addAll(addLauncherNames(lookupInPrederfinedAppImage));
+        return Collections.unmodifiableList(names);
+    }
+
+    JPackageCommand verifyNotRuntime() {
+        if (isRuntime()) {
+            throw new UnsupportedOperationException("Java runtime packaging");
+        }
+        return this;
     }
 
     /**
@@ -602,7 +704,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
     public Path appLauncherCfgPath(String launcherName) {
         verifyNotRuntime();
         if (launcherName == null) {
-            launcherName = name();
+            launcherName = mainLauncherName();
         }
         return appLayout().appDirectory().resolve(launcherName + ".cfg");
     }
@@ -662,11 +764,11 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     public boolean isPackageUnpacked() {
-        return hasArgument(UNPACKED_PATH_ARGNAME);
+        return unpackedPackageDirectory != null;
     }
 
     public static void useToolProviderByDefault(ToolProvider jpackageToolProvider) {
-        defaultToolProvider = Optional.of(jpackageToolProvider);
+        defaultToolProvider.set(Optional.of(jpackageToolProvider));
     }
 
     public static void useToolProviderByDefault() {
@@ -674,7 +776,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     public static void useExecutableByDefault() {
-        defaultToolProvider = Optional.empty();
+        defaultToolProvider.set(Optional.empty());
     }
 
     public JPackageCommand useToolProvider(boolean v) {
@@ -762,6 +864,14 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
         };
     }
 
+    public static CannedFormattedString makeError(CannedFormattedString v) {
+        return v.addPrefix("message.error-header");
+    }
+
+    public static CannedFormattedString makeAdvice(CannedFormattedString v) {
+        return v.addPrefix("message.advice-header");
+    }
+
     public String getValue(CannedFormattedString str) {
         return new CannedFormattedString(str.formatter(), str.key(), Stream.of(str.args()).map(arg -> {
             if (arg instanceof CannedArgument cannedArg) {
@@ -783,16 +893,13 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     public boolean isWithToolProvider() {
-        return Optional.ofNullable(withToolProvider).orElseGet(defaultToolProvider::isPresent);
+        return Optional.ofNullable(withToolProvider).orElseGet(() -> {
+            return defaultToolProvider.get().isPresent();
+        });
     }
 
     public JPackageCommand executePrerequisiteActions() {
         prerequisiteActions.run();
-        return this;
-    }
-
-    public JPackageCommand executeVerifyActions() {
-        verifyActions.run();
         return this;
     }
 
@@ -804,7 +911,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
                 .addArguments(args);
 
         if (isWithToolProvider()) {
-            exec.setToolProvider(defaultToolProvider.orElseGet(JavaTool.JPACKAGE::asToolProvider));
+            exec.setToolProvider(defaultToolProvider.get().orElseGet(JavaTool.JPACKAGE::asToolProvider));
         } else {
             exec.setExecutable(JavaTool.JPACKAGE);
             if (TKit.isWindows()) {
@@ -815,11 +922,20 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
         return exec;
     }
 
+    public Executor.Result executeIgnoreExitCode() {
+        return execute(OptionalInt.empty());
+    }
+
     public Executor.Result execute() {
         return execute(0);
     }
 
     public Executor.Result execute(int expectedExitCode) {
+        return execute(OptionalInt.of(expectedExitCode));
+    }
+
+    private Executor.Result execute(OptionalInt expectedExitCode) {
+        verifyMutable();
         executePrerequisiteActions();
 
         if (hasArgument("--dest")) {
@@ -855,19 +971,26 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
             }
         }
 
-        if (expectedExitCode == 0 && !isImagePackageType()) {
+        if (expectedExitCode.isPresent() && expectedExitCode.orElseThrow() == 0
+                && !isImagePackageType()) {
             ConfigFilesStasher.INSTANCE.accept(this);
         }
 
-        final var copy = new JPackageCommand(this).adjustArgumentsBeforeExecution();
+        final var copy = createMutableCopy().adjustArgumentsBeforeExecution();
 
         final var directoriesAssert = new ReadOnlyPathsAssert(copy);
 
-        Executor.Result result = copy.createExecutor().execute(expectedExitCode);
+        Executor.Result result;
+        if (expectedExitCode.isEmpty()) {
+            result = copy.createExecutor().executeWithoutExitCodeCheck();
+        } else {
+            result = copy.createExecutor().execute(expectedExitCode.orElseThrow());
+        }
 
         directoriesAssert.updateAndAssert();
 
-        if (expectedExitCode == 0 && isImagePackageType()) {
+        if (expectedExitCode.isPresent() && expectedExitCode.orElseThrow() == 0
+                && isImagePackageType()) {
             ConfigFilesStasher.INSTANCE.accept(this);
         }
 
@@ -875,8 +998,8 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
             outputValidator.accept(result.getOutput().iterator());
         }
 
-        if (result.exitCode() == 0) {
-            executeVerifyActions();
+        if (result.exitCode() == 0 && expectedExitCode.isPresent()) {
+            verifyActions.run();
         }
 
         return result;
@@ -884,7 +1007,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
 
     public Executor.Result executeAndAssertHelloAppImageCreated() {
         Executor.Result result = executeAndAssertImageCreated();
-        HelloApp.executeLauncherAndVerifyOutput(this);
+        LauncherVerifier.executeMainLauncherAndVerifyOutput(this);
         return result;
     }
 
@@ -896,7 +1019,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
 
     public JPackageCommand assertImageCreated() {
         verifyIsOfType(PackageType.IMAGE);
-        assertAppLayout();
+        runStandardAsserts();
         return this;
     }
 
@@ -939,10 +1062,10 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
         void updateAndAssert() {
             final var newSnapshots = createSnapshots();
             for (final var a : asserts.keySet().stream().sorted().toList()) {
-                final var snapshopGroup = snapshots.get(a);
-                final var newSnapshopGroup = newSnapshots.get(a);
-                for (int i = 0; i < snapshopGroup.size(); i++) {
-                    TKit.PathSnapshot.assertEquals(snapshopGroup.get(i), newSnapshopGroup.get(i),
+                final var snapshotGroup = snapshots.get(a);
+                final var newSnapshotGroup = newSnapshots.get(a);
+                for (int i = 0; i < snapshotGroup.size(); i++) {
+                    snapshotGroup.get(i).assertEquals(newSnapshotGroup.get(i),
                             String.format("Check jpackage didn't modify ${%s}=[%s]", a, asserts.get(a).get(i)));
                 }
             }
@@ -1046,6 +1169,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     public JPackageCommand setReadOnlyPathAsserts(ReadOnlyPathAssert... asserts) {
+        verifyMutable();
         readOnlyPathAsserts = Set.of(asserts);
         return this;
     }
@@ -1056,21 +1180,29 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
                 asSet::contains)).toArray(ReadOnlyPathAssert[]::new));
     }
 
-    public static enum AppLayoutAssert {
+    public static enum StandardAssert {
         APP_IMAGE_FILE(JPackageCommand::assertAppImageFile),
         PACKAGE_FILE(JPackageCommand::assertPackageFile),
-        MAIN_LAUNCHER(cmd -> {
+        NO_MAIN_LAUNCHER_IN_RUNTIME(cmd -> {
             if (cmd.isRuntime()) {
                 TKit.assertPathExists(convertFromRuntime(cmd).appLauncherPath(), false);
-            } else {
-                TKit.assertExecutableFileExists(cmd.appLauncherPath());
             }
         }),
-        MAIN_LAUNCHER_CFG_FILE(cmd -> {
+        NO_MAIN_LAUNCHER_CFG_FILE_IN_RUNTIME(cmd -> {
             if (cmd.isRuntime()) {
                 TKit.assertPathExists(convertFromRuntime(cmd).appLauncherCfgPath(null), false);
-            } else {
-                TKit.assertFileExists(cmd.appLauncherCfgPath(null));
+            }
+        }),
+        MAIN_LAUNCHER_FILES(cmd -> {
+            if (!cmd.isRuntime()) {
+                new LauncherVerifier(cmd).verify(cmd,
+                        LauncherVerifier.Action.VERIFY_INSTALLED,
+                        LauncherVerifier.Action.VERIFY_MAC_ENTITLEMENTS);
+            }
+        }),
+        MAIN_LAUNCHER_DESCRIPTION(cmd -> {
+            if (!cmd.isRuntime()) {
+                new LauncherVerifier(cmd).verify(cmd, LauncherVerifier.Action.VERIFY_DESCRIPTION);
             }
         }),
         MAIN_JAR_FILE(cmd -> {
@@ -1090,17 +1222,92 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
                 MacHelper.verifyBundleStructure(cmd);
             }
         }),
+        MAC_BUNDLE_UNSIGNED_SIGNATURE(cmd -> {
+            if (TKit.isOSX() && !MacHelper.appImageSigned(cmd)) {
+                MacHelper.verifyUnsignedBundleSignature(cmd);
+            }
+        }),
+        MAC_RUNTIME_PLIST_JDK_KEY(cmd -> {
+            if (TKit.isOSX()) {
+                var appLayout = cmd.appLayout();
+                var plistPath = appLayout.runtimeDirectory().resolve("Contents/Info.plist");
+                var keyName = "JavaVM";
+                var keyValue = MacHelper.readPList(plistPath).findDictValue(keyName);
+                if (cmd.isRuntime() || Files.isDirectory(appLayout.runtimeHomeDirectory().resolve("bin"))) {
+                    // There are native launchers in the runtime
+                    TKit.assertTrue(keyValue.isPresent(), String.format(
+                            "Check the runtime plist file [%s] contains '%s' key",
+                            plistPath, keyName));
+                } else {
+                    TKit.assertTrue(keyValue.isEmpty(), String.format(
+                            "Check the runtime plist file [%s] contains NO '%s' key",
+                            plistPath, keyName));
+                }
+            }
+        }),
+        PREDEFINED_APP_IMAGE_COPY(cmd -> {
+            Optional.ofNullable(cmd.getArgumentValue("--app-image")).filter(_ -> {
+                return !TKit.isOSX() || !MacHelper.signPredefinedAppImage(cmd);
+            }).filter(_ -> {
+                // Don't examine the contents of the output app image if this is Linux package installing in the "/usr" subtree.
+                return Optional.<Boolean>ofNullable(cmd.onLinuxPackageInstallDir(null, _ -> false)).orElse(true);
+            }).map(Path::of).ifPresent(predefinedAppImage -> {
+
+                TKit.trace(String.format(
+                        "Check contents of the predefined app image [%s] copied verbatim",
+                        predefinedAppImage));
+
+                var outputAppImageDir = cmd.pathToUnpackedPackageFile(cmd.appInstallationDirectory());
+
+                try (var walk = Files.walk(predefinedAppImage)) {
+                    var filteredWalk = walk;
+                    if (!cmd.expectAppImageFile()) {
+                        var appImageFile = AppImageFile.getPathInAppImage(predefinedAppImage);
+                        // Exclude ".jpackage.xml" as it should no be in the output bundle.
+                        var pred = Predicate.<Path>isEqual(appImageFile).negate();
+                        if (TKit.isOSX()) {
+                            // On MacOS exclude files that can be signed as their digests change.
+                            pred = pred.and(path -> {
+                                return MacHelper.isVerbatimCopyFromPredefinedAppImage(cmd, path);
+                            });
+                        }
+
+                        filteredWalk = walk.filter(pred);
+                    }
+
+                    var verbatimPaths = filteredWalk.collect(toCollection(TreeSet::new));
+
+                    // Remove nonempty directories from the collection of paths copied verbatim.
+                    verbatimPaths.removeAll(verbatimPaths.stream().map(Path::getParent).toList());
+
+                    verbatimPaths.forEach(ThrowingConsumer.toConsumer(p -> {
+                        if (Files.isDirectory(p, LinkOption.NOFOLLOW_LINKS)) {
+                            TKit.assertDirectoryExists(p);
+                        } else {
+                            TKit.assertSameFileContent(p, outputAppImageDir.resolve(predefinedAppImage.relativize(p)));
+                        }
+                    }));
+                } catch (IOException ex) {
+                    throw new UncheckedIOException(ex);
+                }
+
+                TKit.trace("Done");
+            });
+        }),
+        LINUX_APPLAUNCHER_LIB(cmd -> {
+            if (TKit.isLinux() && !cmd.isRuntime()) {
+                TKit.assertFileExists(cmd.appLayout().libapplauncher());
+            }
+        }),
         ;
 
-        AppLayoutAssert(Consumer<JPackageCommand> action) {
+        StandardAssert(Consumer<JPackageCommand> action) {
             this.action = action;
         }
 
         private static JPackageCommand convertFromRuntime(JPackageCommand cmd) {
-            var copy = new JPackageCommand(cmd);
-            copy.immutable = false;
+            var copy = cmd.createMutableCopy();
             copy.removeArgumentWithValue("--runtime-image");
-            copy.dmgInstallDir = cmd.appInstallationDirectory();
             if (!copy.hasArgument("--name")) {
                 copy.addArguments("--name", cmd.nameFromRuntimeImage().orElseThrow());
             }
@@ -1110,20 +1317,21 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
         private final Consumer<JPackageCommand> action;
     }
 
-    public JPackageCommand setAppLayoutAsserts(AppLayoutAssert ... asserts) {
-        appLayoutAsserts = Set.of(asserts);
+    public JPackageCommand setStandardAsserts(StandardAssert ... asserts) {
+        verifyMutable();
+        standardAsserts = Set.of(asserts);
         return this;
     }
 
-    public JPackageCommand excludeAppLayoutAsserts(AppLayoutAssert... asserts) {
+    public JPackageCommand excludeStandardAsserts(StandardAssert... asserts) {
         var asSet = Set.of(asserts);
-        return setAppLayoutAsserts(appLayoutAsserts.stream().filter(Predicate.not(
-                asSet::contains)).toArray(AppLayoutAssert[]::new));
+        return setStandardAsserts(standardAsserts.stream().filter(Predicate.not(
+                asSet::contains)).toArray(StandardAssert[]::new));
     }
 
-    JPackageCommand assertAppLayout() {
-        for (var appLayoutAssert : appLayoutAsserts.stream().sorted().toList()) {
-            appLayoutAssert.action.accept(this);
+    JPackageCommand runStandardAsserts() {
+        for (var standardAssert : standardAsserts.stream().sorted().toList()) {
+            standardAssert.action.accept(this);
         }
         return this;
     }
@@ -1157,12 +1365,12 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
         } else {
             assertFileInAppImage(lookupPath);
 
+            final Path rootDir = isImagePackageType() ? outputBundle() :
+                pathToUnpackedPackageFile(appInstallationDirectory());
+
+            final AppImageFile aif = AppImageFile.load(rootDir);
+
             if (TKit.isOSX()) {
-                final Path rootDir = isImagePackageType() ? outputBundle() :
-                        pathToUnpackedPackageFile(appInstallationDirectory());
-
-                AppImageFile aif = AppImageFile.load(rootDir);
-
                 boolean expectedValue = MacHelper.appImageSigned(this);
                 boolean actualValue = aif.macSigned();
                 TKit.assertEquals(expectedValue, actualValue,
@@ -1172,6 +1380,16 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
                 actualValue = aif.macAppStore();
                 TKit.assertEquals(expectedValue, actualValue,
                     "Check for unexpected value of <app-store> property in app image file");
+            }
+
+            // Don't compare the add launchers configured on the command line with the
+            // add launchers listed in the `.jpackage.xml` file if the latter comes from
+            // a predefined app image.
+            if (!hasArgument("--app-image")) {
+                TKit.assertStringListEquals(
+                        addLauncherNames(false).stream().sorted().toList(),
+                        aif.addLaunchers().keySet().stream().sorted().toList(),
+                        "Check additional launcher names");
             }
         }
     }
@@ -1205,10 +1423,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
 
     private void assertFileInAppImage(Path filename, Path expectedPath) {
         if (expectedPath != null) {
-            if (expectedPath.isAbsolute()) {
-                throw new IllegalArgumentException();
-            }
-            if (!expectedPath.getFileName().equals(filename.getFileName())) {
+            if (expectedPath.isAbsolute() || !expectedPath.getFileName().equals(filename.getFileName())) {
                 throw new IllegalArgumentException();
             }
         }
@@ -1254,16 +1469,14 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     JPackageCommand setUnpackedPackageLocation(Path path) {
+        verifyMutable();
         verifyIsOfType(PackageType.NATIVE);
-        if (path != null) {
-            setArgumentValue(UNPACKED_PATH_ARGNAME, path);
-        } else {
-            removeArgumentWithValue(UNPACKED_PATH_ARGNAME);
-        }
+        unpackedPackageDirectory = path;
         return this;
     }
 
     JPackageCommand winMsiLogFile(Path v) {
+        verifyMutable();
         if (!TKit.isWindows()) {
             throw new UnsupportedOperationException();
         }
@@ -1286,6 +1499,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     private JPackageCommand adjustArgumentsBeforeExecution() {
+        verifyMutable();
         if (!isWithToolProvider()) {
             // if jpackage is launched as a process then set the jlink.debug system property
             // to allow the jlink process to print exception stacktraces on any failure
@@ -1295,7 +1509,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
             addArguments("--runtime-image", DEFAULT_RUNTIME_IMAGE);
         }
 
-        if (!hasArgument("--verbose") && TKit.VERBOSE_JPACKAGE && !ignoreDefaultVerbose) {
+        if (!hasArgument("--verbose") && TKit.verboseJPackage() && !ignoreDefaultVerbose) {
             addArgument("--verbose");
         }
 
@@ -1311,33 +1525,35 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
         return getPrintableCommandLine();
     }
 
-    public void verifyIsOfType(Collection<PackageType> types) {
-        verifyIsOfType(types.toArray(PackageType[]::new));
+    public final JPackageCommand verifyIsOfType(PackageType ... types) {
+        return verifyIsOfType(Set.of(types));
     }
 
-    public void verifyIsOfType(PackageType ... types) {
-        final var typesSet = Stream.of(types).collect(Collectors.toSet());
+    public final JPackageCommand verifyIsOfType(Iterable<PackageType> types) {
+        return verifyIsOfType(StreamSupport.stream(types.spliterator(), false).collect(toSet()));
+    }
+
+    public JPackageCommand verifyIsOfType(Set<PackageType> types) {
+        Objects.requireNonNull(types);
         if (!hasArgument("--type")) {
             if (!isImagePackageType()) {
-                if (TKit.isLinux() && typesSet.equals(PackageType.LINUX)) {
-                    return;
+                if ((TKit.isLinux() && types.equals(PackageType.LINUX)) || (TKit.isWindows() && types.equals(PackageType.WINDOWS))) {
+                    return this;
                 }
 
-                if (TKit.isWindows() && typesSet.equals(PackageType.WINDOWS)) {
-                    return;
+                if (TKit.isOSX() && types.equals(PackageType.MAC)) {
+                    return this;
                 }
-
-                if (TKit.isOSX() && typesSet.equals(PackageType.MAC)) {
-                    return;
-                }
-            } else if (typesSet.equals(Set.of(PackageType.IMAGE))) {
-                return;
+            } else if (types.equals(Set.of(PackageType.IMAGE))) {
+                return this;
             }
         }
 
-        if (!typesSet.contains(packageType())) {
-            throw new IllegalArgumentException("Unexpected type");
+        if (!types.contains(packageType())) {
+            throw new UnsupportedOperationException(String.format("Unsupported operation for type [%s]", packageType().getType()));
         }
+
+        return this;
     }
 
     public CfgFile readLauncherCfgFile() {
@@ -1433,18 +1649,47 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
         }
 
         void add(ThrowingConsumer<JPackageCommand> action) {
-            Objects.requireNonNull(action);
+            add(action, ActionRole.DEFAULT);
+        }
+
+        void add(ThrowingConsumer<JPackageCommand> action, ActionRole role) {
             verifyMutable();
-            actions.add(new Consumer<JPackageCommand>() {
-                @Override
-                public void accept(JPackageCommand t) {
-                    if (!executed) {
-                        executed = true;
-                        ThrowingConsumer.toConsumer(action).accept(t);
-                    }
+            actions.add(new Action(action, role));
+        }
+
+        Stream<ThrowingConsumer<JPackageCommand>> actionsWithRole(ActionRole role) {
+            Objects.requireNonNull(role);
+            return actions.stream().filter(action -> {
+                return Objects.equals(action.role(), role);
+            }).map(Action::impl);
+        }
+
+        private static final class Action implements Consumer<JPackageCommand> {
+
+            Action(ThrowingConsumer<JPackageCommand> impl, ActionRole role) {
+                this.impl = Objects.requireNonNull(impl);
+                this.role = Objects.requireNonNull(role);
+            }
+
+            ActionRole role() {
+                return role;
+            }
+
+            ThrowingConsumer<JPackageCommand> impl() {
+                return impl;
+            }
+
+            @Override
+            public void accept(JPackageCommand cmd) {
+                if (!executed) {
+                    executed = true;
+                    ThrowingConsumer.toConsumer(impl).accept(cmd);
                 }
-                private boolean executed;
-            });
+            }
+
+            private final ActionRole role;
+            private final ThrowingConsumer<JPackageCommand> impl;
+            private boolean executed;
         }
 
         @Override
@@ -1453,7 +1698,7 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
             actions.forEach(action -> action.accept(JPackageCommand.this));
         }
 
-        private final List<Consumer<JPackageCommand>> actions;
+        private final List<Action> actions;
     }
 
     private Boolean withToolProvider;
@@ -1464,39 +1709,29 @@ public class JPackageCommand extends CommandArguments<JPackageCommand> {
     private boolean ignoreDefaultRuntime;
     private boolean ignoreDefaultVerbose;
     private boolean immutable;
-    private Path dmgInstallDir;
     private final Actions prerequisiteActions;
     private final Actions verifyActions;
     private Path executeInDirectory;
     private Path winMsiLogFile;
+    private Path unpackedPackageDirectory;
     private Set<ReadOnlyPathAssert> readOnlyPathAsserts = Set.of(ReadOnlyPathAssert.values());
-    private Set<AppLayoutAssert> appLayoutAsserts = Set.of(AppLayoutAssert.values());
+    private Set<StandardAssert> standardAsserts = Set.of(StandardAssert.values());
     private List<Consumer<Iterator<String>>> outputValidators = new ArrayList<>();
-    private static Optional<ToolProvider> defaultToolProvider = Optional.empty();
-
-    private static final Map<String, PackageType> PACKAGE_TYPES = Functional.identity(
-            () -> {
-                Map<String, PackageType> reply = new HashMap<>();
-                for (PackageType type : PackageType.values()) {
-                    reply.put(type.getType(), type);
-                }
-                return reply;
-            }).get();
-
-    public static final Path DEFAULT_RUNTIME_IMAGE = Functional.identity(() -> {
-        // Set the property to the path of run-time image to speed up
-        // building app images and platform bundles by avoiding running jlink
-        // The value of the property will be automativcally appended to
-        // jpackage command line if the command line doesn't have
-        // `--runtime-image` parameter set.
-        String val = TKit.getConfigProperty("runtime-image");
-        if (val != null) {
-            return Path.of(val);
+    private static InheritableThreadLocal<Optional<ToolProvider>> defaultToolProvider = new InheritableThreadLocal<>() {
+        @Override
+        protected Optional<ToolProvider> initialValue() {
+            return Optional.empty();
         }
-        return null;
-    }).get();
+    };
 
-    private static final String UNPACKED_PATH_ARGNAME = "jpt-unpacked-folder";
+    private static final Map<String, PackageType> PACKAGE_TYPES = Stream.of(PackageType.values()).collect(toMap(PackageType::getType, x -> x));
+
+    // Set the property to the path of run-time image to speed up
+    // building app images and platform bundles by avoiding running jlink.
+    // The value of the property will be automatically appended to
+    // jpackage command line if the command line doesn't have
+    // `--runtime-image` parameter set.
+    public static final Path DEFAULT_RUNTIME_IMAGE = Optional.ofNullable(TKit.getConfigProperty("runtime-image")).map(Path::of).orElse(null);
 
     // [HH:mm:ss.SSS]
     private static final Pattern TIMESTAMP_REGEXP = Pattern.compile(
